cambiado el puntosregion para que ande print en main