@@ -1,15 +1,12 @@
 package edu.uca;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 public class PuntosRegion {
-    List<Integer> puntosRegion;
+    LinkedList<Integer> puntosRegion = new LinkedList<>();
 
     public PuntosRegion(int cantJugadores) {
-        puntosRegion = Arrays.asList(0, 2, 2, 2, 4, 4, 6, 6, 8, 8, 8, 10);
+        puntosRegion.addAll(Arrays.asList(0, 2, 2, 2, 4, 4, 6, 6, 8, 8, 8, 10));
         if (cantJugadores > 3) {
             List<Integer> masDeCuatro = Arrays.asList(0,4,4,6,6,10);
             puntosRegion.addAll(masDeCuatro);
@@ -18,7 +15,7 @@ public class PuntosRegion {
     }
 
     public int asignarPuntoARegion(){
-        int puntoAASignar = puntosRegion.get(0);
+        int puntoAASignar = puntosRegion.getFirst();
         puntosRegion.removeFirst();
         return puntoAASignar;
     }
